kustomize/base/backend/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend
spec:
  hostnames:
    - "www.example.com"
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: eg
      namespace: default
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: active
          namespace: default
          port: 3000
        - group: gateway.envoyproxy.io
          kind: Backend
          name: passive
          namespace: default
          port: 3000
      matches:
        - path:
            type: PathPrefix
            value: /
